# KFC-PW6-TB33-Kyndaliuk

./: README.md  main.py  pyproject.toml  task.json
gui/: create_simulation_window.py  main_window.py  simulation_viewer.py
logic/: observer.py  player.py  state_manager.py
pandemy_simulation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
simulation/: cell_state.py  cellular_automaton.py
tests/: test_cellular_automaton.py  test_player.py  test_sanity.py  test_state_manager.py
