[project]
name = "pandemy_simulation"
version = "0.1.0"
description = "Симуляція пандемії"
authors = [
    { name="Костя Киндалюк", email="your@email.com" }
]
dependencies = ["ttkbootstrap",
"numpy"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]